# opengl_test2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  opengl_test2
inc/: gl_utils.hpp
libs/: CMakeLists.txt  glew-1.13.0  glfw-3.1.1  glm-0.9.7.0
src/: gl_utils.cpp  main.cpp  main.cpp~
